--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -1,4 +1,4 @@
-NAME			:= brain
+NAME			:= violence
 CPPFLAGS		:= -Wall -Wextra -Werror -std=c++98
 SRCS			:= main.cpp Weapon.cpp HumanA.cpp HumanB.cpp
 BINDIR			:= bin/
